--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "cucumber": "1.3.3",
+    "cucumberjs-allure-reporter": "^1.0.3",
     "https-proxy-agent": "latest",
     "protractor": "4.0.14",
     "protractor-cucumber-framework": "0.6.0",
